[package]
name = "monoio-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.103", features = ["derive"], optional = true }
local-sync = {version = "0.1.0"}
monoio = { version = "0.1.5" }
thiserror = "1"

