[package]
name = "monoio-client"
version = "0.1.0"
edition = "2021"
description = "A generic client which supports pooling, timeout and more"
authors = [
    "ChiHai <ihciah@gmail.com>",
    "Harsha <har23k@gmail.com>",
]
license = "MIT/Apache-2.0"

[dependencies]
serde = { version = "1.0.103", features = ["derive"], optional = true }
local-sync = {version = "0.1.0"}
monoio = { version = "0.1.5" }
thiserror = "1"

